# uni-foli

./: .env.example  .env.sqlite.example  .gitignore  .vercelignore  ARCHITECTURE_OVERVIEW.md  BEGINNER_GUIDE.md  CLAUDE.md  README.md  docker-compose.yml  format_items.py  gen_all_items.py  gen_items.py  headers.txt  package.json  pyproject.toml  vercel.json
alembic/: env.py
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt  vercel.json
backend/alembic/versions/: 20260320_0001_initial_schema.py  20260322_0002_add_users_table.py  20260322_0003_document_processing_state.py  20260322_0004_add_diagnosis_runs.py  20260322_0005_add_blueprint_quests.py  20260322_0006_add_workshop_models.py  20260322_0007_add_draft_artifacts.py  20260322_0008_add_quality_level.py  20260325_0009_add_runtime_safety_tables.py  20260329_0010_add_visual_support_fields.py  20260330_0011_add_workshop_stream_token_expiry.py  20260330_0012_add_inquiries_table.py  20260408_0014_add_marketing_agreed_to_users.py  20260430_0021_add_async_job_phase_failure_code.py  (+2 more)
backend/prompts/: registry.v1.json
backend/scripts/: setup-local.ps1  start-api.ps1  start-worker.ps1
backend/tests/: auth_helpers.py  test_admin_routes.py  test_async_job_failure_reason.py  test_auth_and_diagnosis_runtime.py  test_backend_encoding_repair.py  test_chat_fallback_service.py  test_chat_stream_fallback.py  test_config_posture.py  test_diagnosis_artifact_runtime.py  test_diagnosis_axis_schema_contract.py  test_diagnosis_report_autobootstrap.py  test_diagnosis_report_interview_questions.py  test_diagnosis_report_quality_service.py  test_diagnosis_report_service.py  test_diagnosis_report_structure_bridge.py  test_diagnosis_runtime_canonical_fallback.py  test_diagnosis_runtime_resilience.py  test_diagnosis_scoring_service.py  test_diagnosis_status_autoprocess.py  test_document_service_quality_flags.py  test_grounded_answer.py  test_guided_chat.py  test_health.py  test_hwpx_renderer_evidence_highlight.py  test_ingest_and_render.py  test_inquiries.py  test_inquiry_email_notification.py  test_interview_service.py  test_llm_profiles.py  test_neis_pdf_pipeline.py  test_pdf_analysis_service.py  test_pdf_ingest_resilience.py  test_pdf_student_record_structure.py  test_prompt_registry.py  test_research_cache_and_jobs.py  test_research_live_web_fallback.py  test_safety_guard_korean_heuristics.py  test_search_provider_service.py  test_security_hardening.py  test_student_record_feature_service.py  (+8 more)
(+614 files in other folders)
