[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polio-backend"
version = "0.1.0"
description = "Admissions-focused, source-grounded backend foundation for the polio project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2.0",
  "docling>=2.0,<3.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "jsonschema>=4.23,<5.0",
  "langfuse>=4.0,<5.0",
  "litellm>=1.82,<2.0",
  "pgvector>=0.3,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "redis>=5.2,<6.0",
  "rq>=1.16,<2.0",
  "pypdf>=5.0,<6.0",
  "uvicorn[standard]>=0.32,<1.0",
  "python-pptx>=1.0,<2.0",
  "reportlab>=4.2,<5.0",
  "sqlalchemy>=2.0,<3.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "presidio-analyzer>=2.2,<3.0",
  "presidio-anonymizer>=2.2,<3.0",
  "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[project.scripts]
polio-api = "app.main:run"
polio-worker = "workers.runner:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [
  ".",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
